--- a/github.html
+++ b/github.html
@@ -2,75 +2,54 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Github</title>
 </head>
 <body>
-<header>
-    <img src="img/github_cat.png" width="40" alt="github cat">
-</header>
 <main>
-    <section>
+    <header>
+        <img src="img/30x30.svg" height="30px" alt="octocat">
         <ul>
             <li><a href="#">Pull requests</a></li>
             <li><a href="#">Issues</a></li>
             <li><a href="#">Marketplace</a></li>
             <li><a href="#">Explore</a></li>
         </ul>
-        <img src="http://placeholder.pics/svg/30  # Use this one for the 2 first images" alt="codeup duck">
-    </section>
-    <section>
+    </header>
+    <nav>
+        <img src="img/48x48.svg" alt="codeup duck">
         <h2>Codeup</h2>
         <ul>
             <li><a href="#">Repos</a> 39</li>
-            <li><a href="#">People</a> 39</li>
-            <li><a href="#">Teams</a> 39</li>
-            <li><a href="#">Projects</a> 39</li>
-            <li><a href="#">Settings</a> 39</li>
+            <li><a href="#">People</a> 15</li>
+            <li><a href="#">Teams</a> 7</li>
+            <li><a href="#">Projects</a> 0</li>
+            <li><a href="#">Settings</a></li>
         </ul>
-    </section>
+    </nav>
     <section>
         <table>
             <tr>
                 <td>Codeup's Dev Team</td>
             </tr>
             <tr>
-                <td><img src="http://placeholder.pics/svg/48  # Use this one for the images in the table" alt="kentb"><a
+                <td><img src="img/48x48.svg" alt="kentb"><a
                         href="#">Kent Beck</a></td>
-            </tr>
-            <tr>
                 <td>KentBeck</td>
-            </tr>
-            <tr>
                 <td>Member</td>
+                <td>1 team</td>
             </tr>
             <tr>
-                <td>X team members</td>
-            </tr>
-            <tr>
-                <td><img src="http://placeholder.pics/svg/48  # Use this one for the images in the table" alt="staff"><a
-                        href="#">Codeup Staff</a></td>
-            </tr>
-            <tr>
-                <td>CodeupStaff</td>
-            </tr>
-            <tr>
+                <td><img src="img/48x48.svg" alt="staff"><a
+                        href="#">Codeup Instruction Staff</a></td>
+                <td>CodeupInstructors</td>
                 <td>Member</td>
+                <td>1 team</td>
             </tr>
             <tr>
-                <td>X team members</td>
-            </tr>
-            <tr>
-                <td><img src="http://placeholder.pics/svg/48  # Use this one for the images in the table" alt="martinf"><a
-                        href="#">Martin F</a></td>
-            </tr>
-            <tr>
-                <td>Martin F</td>
-            </tr>
-            <tr>
+                <td><img src="img/48x48.svg" alt="martinf"><a
+                        href="#">Martin Fowler</a></td>
                 <td>Member</td>
-            </tr>
-            <tr>
-                <td>X team members</td>
+                <td>0 teams</td>
             </tr>
         </table>
     </section>
