--- a/github.html
+++ b/github.html
@@ -16,49 +16,76 @@
         </ul>
     </header>
     <nav>
-        <img src="img/48x48.svg" alt="codeup duck">
+        <img src="img/48x48.svg" alt="codee">
         <h2>Codeup</h2>
         <ul>
-            <li><a href="#">Repos</a> 39</li>
-            <li><a href="#">People</a> 15</li>
-            <li><a href="#">Teams</a> 7</li>
-            <li><a href="#">Projects</a> 0</li>
-            <li><a href="#">Settings</a></li>
+            <li>
+                <a href="#">Repositories</a>
+                39
+            </li>
+            <li>
+                <a href="#">People</a>
+                15
+            </li>
+            <li>
+                <a href="#">Teams</a>
+                7
+            </li>
+            <li>
+                <a href="#">Projects</a>
+                0
+            </li>
+            <li>
+                <a href="#">Settings</a>
+            </li>
         </ul>
     </nav>
-    <section>
-        <table>
-            <tr>
-                <td>Codeup's Dev Team</td>
-            </tr>
-            <tr>
-                <td><img src="img/48x48.svg" alt="kentb"><a
-                        href="#">Kent Beck</a></td>
-                <td>KentBeck</td>
-                <td>Member</td>
-                <td>1 team</td>
-            </tr>
-            <tr>
-                <td><img src="img/48x48.svg" alt="staff"><a
-                        href="#">Codeup Instruction Staff</a></td>
-                <td>CodeupInstructors</td>
-                <td>Member</td>
-                <td>1 team</td>
-            </tr>
-            <tr>
-                <td><img src="img/48x48.svg" alt="martinf"><a
-                        href="#">Martin Fowler</a></td>
-                <td>Member</td>
-                <td>0 teams</td>
-            </tr>
-        </table>
-    </section>
+    <table>
+        <tr>
+            <th>Codeup's Dev Team</th>
+        </tr>
+        <tr>
+            <td>
+                <img src="img/48x48.svg" alt="kentb">
+                <a href="#">Kent Beck</a><br>
+                KentBeck
+            </td>
+            <td>Member</td>
+            <td>1 team</td>
+        </tr>
+        <tr>
+            <td>
+                <img src="img/48x48.svg" alt="staff">
+                <a href="#">Codeup Instruction Staff</a><br>
+                CodeupInstructors
+            </td>
+            <td>Member</td>
+            <td>1 team</td>
+        </tr>
+        <tr>
+            <td>
+                <img src="img/48x48.svg" alt="martinf">
+                <a href="#">Martin Fowler</a>
+            </td>
+            <td>Member</td>
+            <td>0 teams</td>
+        </tr>
+    </table>
 </main>
 <footer>
-    <div>&#169; 2018 Github.Inc</div>
-    <div><a href="#">Terms</a> <a href="#">Privacy</a> <a href="#">Security</a> <a href="#">Status</a> <a
-            href="#">Help</a></div>
-    <div><a href="#">Contact</a> <a href="#">API</a> <a href="#">Training</a></div>
+&#169; 2018 Github.Inc
+    <section>
+        <a href="#">Terms</a>
+        <a href="#">Privacy</a>
+        <a href="#">Security</a>
+        <a href="#">Status</a>
+        <a href="#">Help</a>
+    </section>
+    <section>
+        <a href="#">Contact</a>
+        <a href="#">API</a>
+        <a href="#">Training</a>
+    </section>
 </footer>
 </body>
 </html>
