--- a/welcome.html
+++ b/welcome.html
@@ -4,10 +4,11 @@
     <title>
         welcome.png
     </title>
+        <link rel="stylesheet" href="CSS/style.css">
 </head>
 <body>
 <header id="top">
-    <h1>Welcome to Viridian Dynamics!</h1>
+    <h1 class="fancy-header">Welcome to Viridian Dynamics!</h1>
     <p>At Viridian Dynamics <strong>we</strong> solve <em>your</em> problems with <strong><em>technology</em></strong>.
     </p>
 </header>
