finished welcome.html and css  stylesheet

--- a/welcome.html
+++ b/welcome.html
@@ -42,12 +42,12 @@
     <section>
         <h2>Company Vision</h2>
         <img src="img/laptop.webp" width="45%" alt="computers"/>
-        <img src="img/silouette.webp" width="45%" alt="silouette"/>
+        <img class="man" src="img/silouette.webp" width="45%" alt="silouette"/>
         <img src="img/sunset.img" width="45%" alt="sunset"/>
         <img src="img/meeting.webp" height="25%" width="45%" alt="meeting"/>
     </section>
     <section>
-        <h2>Our Product</h2>
+        <h2 class="th">Our Product</h2>
         <table>
             <tr>
                 <th>Plan</th>
