--- a/twitter.html
+++ b/twitter.html
@@ -8,10 +8,10 @@
 <body>
 <nav class="top-nav">
     <ul class="nav">
-        <li class="nav-item" style="display: inline-block;padding: 1.5em"><a class="nav-link" href="#">Home</a></li>
-        <li class="nav-item" style="display: inline-block;padding: 1.5em"><a class="nav-link" href="#">Moments</a></li>
-        <li class="nav-item" style="display: inline-block;padding: 1.5em"><a class="nav-link" href="#">Notifications</a></li>
-        <li class="nav-item" style="display: inline-block;padding: 1.5em"><a class="nav-link" href="#">Messages</a></li>
+        <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
+        <li class="nav-item"><a class="nav-link" href="#">Moments</a></li>
+        <li class="nav-item"><a class="nav-link" href="#">Notifications</a></li>
+        <li class="nav-item"><a class="nav-link" href="#">Messages</a></li>
     </ul>
 </nav>
 <header>
