need to finish footer at later time

--- a/flexbox-nav-exercise.html
+++ b/flexbox-nav-exercise.html
@@ -34,5 +34,51 @@
         </ul>
     </nav>
 </header>
+
+<hr>
+
+<footer>
+    <div class="container2">
+        <ul class="foot">
+            <li><a href="#">Weebly Themes</a></li>
+            <li><a href="#">Pre-Sale FAQS</a></li>
+            <li><a href="#">Submit a Ticket</a></li>
+        </ul>
+        <ul class="foot">
+            <li><a href="#">Services</a></li>
+            <li><a href="#">Theme Tweak</a></li>
+        </ul>
+        <ul class="foot">
+            <li><a href="#">Showcase</a></li>
+            <li><a href="#">Widgetkit</a></li>
+            <li><a href="#">Support</a></li>
+        </ul>
+        <ul class="foot">
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Contact Us</a></li>
+            <li><a href="#">Affiliates</a></li>
+            <li><a href="#">Resources</a></li>
+        </ul>
+<!--        <div class="social-media-links foot">-->
+            <ul class="social-media-links foot">
+                <li><a href="#">Follow Us</a></li>
+                <li><a href="#">Subscribe Us</a></li>
+                <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+                <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                <li><a href="#"><i class="fas fa-rss"></i></a></li>
+                <li><a href="#"><i class="fab fa-google-plus-g"></i></a></li>
+                <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+                <li class="email">
+                    <div>
+                        <input type="text" placeholder="YOUR EMAIL">
+                        <button type="submit">SUBMIT</button>
+                    </div>
+                </li>
+            </ul>
+<!--        </div>-->
+    </div>
+    <hr>
+    <small>@Copyright. All rights reserved.</small>
+</footer>
 </body>
 </html>
