completed js w/ html exercise with added other methods

--- a/external_js.html
+++ b/external_js.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Inline JS</title>
+    <title>External JS</title>
 </head>
 <body>
 <script src="js/external.js"></script>
