finished exercise todo list

--- a/functions_js.html
+++ b/functions_js.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Functions</title>
@@ -21,7 +21,8 @@
 <!--    console.log("Happy Birthday to You!")-->
 <!--    //repeating-->
 <!--    -->
-<!--    //or use a function and set a parameter-->
+<!--    //or use a function and define an argument
+            within the parameter-->
 <!--    happyBirthday("Ryan");-->
 <!--    happyBirthday("Chris");-->
 <!--    -->
@@ -34,12 +35,12 @@
 <!--    -->
 <!--    -->
 <!--</script>-->
-<script>
-    "use strict"
-    function sumOfAll(a,b) {
-        console.log(a+b);
-    }
-    sumOfAll(5,2);
+<script src="js/functions.js">
+    // "use strict"
+    // function sumOfAll(a,b) {
+    //     console.log(a+b);
+    // }
+    // sumOfAll(5,2);
 </script>
 </body>
 </html>
