finished conditionals.js exercise

--- a/conditionals.html
+++ b/conditionals.html
@@ -5,7 +5,7 @@
     <title>Conditionals JS</title>
 </head>
 <body>
-<script src="js/conditionals-lec.js">
+<script src="js/conditionals.js">
 
 </script>
 </body>
