--- a/report.html
+++ b/report.html
@@ -4,19 +4,19 @@
   <meta charset="utf-8">
   <title>Jasmine Spec Runner v3.3.0</title>
 
-  <link rel="shortcut icon" type="image/png" href="./jasmine/lib/jasmine-3.3.0/jasmine_favicon.png">
-  <link rel="stylesheet" href="./jasmine/lib/jasmine-3.3.0/jasmine.css">
+  <link rel="shortcut icon" type="image/png" href="jasmine-3.5.0/jasmine_favicon.png">
+  <link rel="stylesheet" href="jasmine-3.5.0/jasmine.css">
 
 </head>
 <body>
 
   <!-- Jasmine Library -->
-  <script src="./jasmine/lib/jasmine-3.3.0/jasmine.js"></script>
-  <script src="./jasmine/lib/jasmine-3.3.0/jasmine-html.js"></script>
-  <script src="./jasmine/lib/jasmine-3.3.0/boot.js"></script>
+  <script src="jasmine-3.5.0/jasmine.js"></script>
+  <script src="jasmine-3.5.0/jasmine-html.js"></script>
+  <script src="jasmine-3.5.0/boot.js"></script>
 
   <!-- include the test files here... -->
-  <script src="./tests.js" type="text/javascript"></script>
+  <script src="tests/tests.js" type="text/javascript"></script>
 
   <!-- include the implementation files here... -->
   <script src="js/code.js" type="text/javascript"></script>
