finished isFive in js/code.js, completed all but returnNumberSail() exercise in for_loops_tests.js

--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -12,11 +12,11 @@
   <script src="jasmine-3.5.0/boot.js"></script>
 
   <!-- include files to test here... -->
-  <script src="js/example.js"></script>
+  <script src="js/for_loops.js"></script>
 
 
   <!-- include test files here... -->
-  <script src="tests/example-tests.js"></script>
+  <script src="tests/for_loops_tests.js"></script>
 
 
 </head>
