--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -12,12 +12,12 @@
   <script src="jasmine-3.5.0/boot.js"></script>
 
   <!-- include files to test here... -->
-  <script src="js/for_loops.js"></script>
-
+<!--  <script src="js/for_loops.js"></script>-->
+  <script src="js/break_and_continue.js"></script>
 
   <!-- include test files here... -->
-  <script src="tests/for_loops_tests.js"></script>
-
+<!--  <script src="tests/for_loops_tests.js"></script>-->
+  <script src="tests/break_and_continue_tests.js"></script>
 
 </head>
 <body>
