completed loops exercises after Trant's walkthrough.

--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -13,13 +13,13 @@
 
   <!-- include files to test here... -->
 <!--  <script src="js/for_loops.js"></script>-->
-  <script src="js/break_and_continue.js"></script>
-<!--  <script src="js/while.js"></script>-->
+<!--  <script src="js/break_and_continue.js"></script>-->
+  <script src="js/while.js"></script>
 
   <!-- include test files here... -->
 <!--  <script src="tests/for_loops_tests.js"></script>-->
-  <script src="tests/break_and_continue_tests.js"></script>
-<!--  <script src="tests/while_tests.js"></script>-->
+<!--  <script src="tests/break_and_continue_tests.js"></script>-->
+  <script src="tests/while_tests.js"></script>
 
 </head>
 <body>
