--- a/loops.html
+++ b/loops.html
@@ -5,7 +5,7 @@
     <title>Loops</title>
 </head>
 <body>
-<script src="js/break_and_continue.js">
+<script src="js/while.js">
 
 </script>
 </body>
