completed defuse-the-bom.html and downloaded dom-query-js.html

--- a/defuse-the-bom.html
+++ b/defuse-the-bom.html
@@ -14,9 +14,10 @@
     "use strict";
 
     var detonationTimer = 5;
-
+    var interval = 1000;
     // TODO: This function needs to be called once every second
-    function updateTimer() {
+    var intervalID = setInterval(function updateTimer() {
+
         if (detonationTimer == 0) {
             alert('EXTERMINATE!');
             document.body.innerHTML = '';
@@ -25,12 +26,12 @@
         }
 
         detonationTimer--;
-    }
+    }, interval)
 
     // TODO: When this function runs, it needs to
     // cancel the interval/timeout for updateTimer()
     function defuseTheBOM() {
-
+        clearTimeout(intervalID);
     }
 
     // Don't modify anything below this line!
