--- a/dom-query-js.html
+++ b/dom-query-js.html
@@ -41,40 +41,45 @@
 <script>
     (function () {
         "use strict";
-
+    // var disable = false;
 //================================= mainHeader Listener =================================
         var listener = function (event) {
-            // TODO: Set inner html of mainHeader to "JavaScript is Cool"
+                // TODO: Uncomment next line and get the main header element by id
+            var mainHeader = document.getElementById('main-header');
+                // TODO: Set inner html of mainHeader to "JavaScript is Cool"
             mainHeader.innerHTML = 'JavaScript is Cool'
         }
         // add event listener to btn1
         var btn1 = document.getElementById('btn1');
         btn1.addEventListener('click', listener);
 
-        // TODO: Uncomment next line and get the main header element by id
-        var mainHeader = document.getElementById('main-header');
+
 
 //================================= subHeader Listener =================================
         var listener2 = function (event) {
+            // TODO: Uncomment the next line and get the sub header element by id
+            var subHeader = document.getElementById('sub-header');
             // TODO: Set the text color of subHeader to blue
             subHeader.setAttribute("style", "color: blue")
         }
         var btn2 = document.getElementById('btn2');
         btn2.addEventListener('click', listener2)
 
-        // TODO: Uncomment the next line and get the sub header element by id
-        var subHeader = document.getElementById('sub-header');
+
 
 //================================= listItems Listener =================================
         var listener3 = function (event) {
+            // TODO: Uncomment the next line and get all list items
+            var listItems = document.getElementsByTagName('li')
             for (var i = 0; i < listItems.length; i++) {
+                // TODO: Set text color on every other list item to grey
                 //start of solution for line 54
                 if (listItems[i].getAttribute("data-dbid") === '1') {
                     listItems[i].setAttribute("style", "color: blue")
                 }
                 //end of solution for line 54
                 else if (i % 2 !== 0) {
-                    listItems[i].setAttribute("style", "color: red");
+                    listItems[i].setAttribute("style", "color: grey");
                 }
             }
             // TODO: Set text color of li with dbid = 1 to blue
@@ -83,19 +88,18 @@
         var btn3 = document.getElementById('btn3');
         btn3.addEventListener('click', listener3)
 
-        // TODO: Uncomment the next line and get all list items
-        var listItems = document.getElementsByTagName('li')
-        // TODO: Set text color on every other list item to grey
+
 
 //================================= subParagraphs Listener =================================
         var listener4 = function(event) {
+            // TODO: Uncomment the next line and get all elements with class name sub-paragraph
+            var subParagraphs = document.getElementsByClassName('sub-paragraph');
             // TODO: Change the text in the first sub paragraph to "Mission Accomplished!"
             subParagraphs[0].innerText = 'Mission Accomplished!'
         }
         var btn4 = document.getElementById('btn4');
         btn4.addEventListener('click', listener4);
-        // TODO: Uncomment the next line and get all elements with class name sub-paragraph
-        var subParagraphs = document.getElementsByClassName('sub-paragraph');
+
 
     })();
 </script>
