--- a/dom-query-js.html
+++ b/dom-query-js.html
@@ -41,13 +41,20 @@
 <script>
     (function () {
         "use strict";
-    // var disable = false;
+        let mode = 1;
 //================================= mainHeader Listener =================================
         var listener = function (event) {
                 // TODO: Uncomment next line and get the main header element by id
             var mainHeader = document.getElementById('main-header');
                 // TODO: Set inner html of mainHeader to "JavaScript is Cool"
-            mainHeader.innerHTML = 'JavaScript is Cool'
+            if (mode === 1) {
+                mainHeader.innerHTML = 'JavaScript is Cool'
+                mode = 2
+            }
+            else {
+                mainHeader.innerHTML = 'Hello World!'
+                mode = 1
+            }
         }
         // add event listener to btn1
         var btn1 = document.getElementById('btn1');
@@ -60,7 +67,14 @@
             // TODO: Uncomment the next line and get the sub header element by id
             var subHeader = document.getElementById('sub-header');
             // TODO: Set the text color of subHeader to blue
-            subHeader.setAttribute("style", "color: blue")
+            if (mode === 1) {
+                subHeader.setAttribute("style", "color: blue")
+                mode = 2
+            }
+            else {
+                subHeader.setAttribute("style", "color: white")
+                mode = 1
+            }
         }
         var btn2 = document.getElementById('btn2');
         btn2.addEventListener('click', listener2)
@@ -95,7 +109,20 @@
             // TODO: Uncomment the next line and get all elements with class name sub-paragraph
             var subParagraphs = document.getElementsByClassName('sub-paragraph');
             // TODO: Change the text in the first sub paragraph to "Mission Accomplished!"
-            subParagraphs[0].innerText = 'Mission Accomplished!'
+            if (mode === 1) {
+                subParagraphs[0].innerText = 'Mission Accomplished!'
+                mode = 2
+            }
+            else {
+                subParagraphs[0].innerText = "Lorem ipsum dolor sit amet, consectetur adipisicing elit, " +
+                    "sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim " +
+                    "ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut" +
+                    "aliquip ex ea commodo consequat. Duis aute irure dolor in" +
+                    "reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla" +
+                    "pariatur. Excepteur sint occaecat cupidatat non proident, sunt in" +
+                    "culpa qui officia deserunt mollit anim id est laborum."
+                mode = 1
+            }
         }
         var btn4 = document.getElementById('btn4');
         btn4.addEventListener('click', listener4);
