completed 7&8 at the same time by getting the source material and modifying it to fit my needs. Would like to see other students methods to achieve this without taking the source material.

--- a/mapbox_maps_api.html
+++ b/mapbox_maps_api.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta>
+    <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no" />
     <title>Mapbox API Exercise</title>
 
     <link href='https://api.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.css' rel='stylesheet'/>
