added a challenge for a later time

--- a/konami.html
+++ b/konami.html
@@ -10,6 +10,7 @@
 <script>
     "use strict";
     var code = [];
+
     $('body').css('background-image', 'img/wasabi-bar.jpg')
     $(document).keyup(function (event) {
         var konamiCode = [38, 38, 40, 40, 37, 39, 37, 39, 66, 65, 13];
@@ -27,7 +28,7 @@
                 // location.reload()
                 code = []
             }
-
+    //        Think of a way to run location.reload() when you hit the "R" key
     });
 
 
