--- a/konami.html
+++ b/konami.html
@@ -16,6 +16,20 @@
         'width': '1000px', 'background-repeat': 'no-repeat'
     })
 
+    let playing = false;
+    $(document).click(function () {
+        playBackgroundMusic();
+    })
+    function playBackgroundMusic() {
+        if (!playing) {
+            var audio = new Audio()
+            audio.src = 'audio/konamiBackground.wav'
+            audio.loop = true
+            audio.play()
+            playing = true;
+        }
+    }
+
     var code = [];
     $(document).keyup(function (event) {
         var konamiCode = [38, 38, 40, 40, 37, 39, 37, 39, 66, 65, 13];
